# axum_api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
src/bus/: email_bus.rs  mod.rs  redis_bus.rs
src/handlers/: customer.rs  login.rs  mod.rs  register.rs  ws.rs
src/middlewares/: auth.rs
src/models/: error.rs  location_user.rs  login_user.rs  mod.rs  parcel.rs  redis_state.rs  state.rs  user.rs
tests/: Dockerfile  customer_location.js  driver_location.js
