[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version="0.3",  features = ["env-filter"]}
tower-http = { version = "0.6.8", features = ["trace"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "time", "macros", "uuid"] }
time = { version = "0.3", features = ["serde"] }

# password hashing
argon2        = "0.5"

# session tokens
uuid          = { version = "1", features = ["v4", "serde"] }

# error handling
thiserror     = "1"
anyhow        = "1"
