[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
futures = { version = "0.3" }
serde_json = "1"
tower = "0.5.3"
tracing = "0.1"
tracing-subscriber = { version="0.3",  features = ["env-filter"]}
tower-http = { version = "0.6.8", features = ["trace"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "time", "macros", "uuid"] }
time = { version = "0.3", features = ["serde"] }


# password hashing
argon2        = "0.5"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

# session tokens
uuid          = { version = "1", features = ["v4", "serde"] }

# error handling
thiserror     = "1"
anyhow        = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# location update
redis = { version = "0.27.0", features = ["tokio-comp"] }
dashmap = "6.0"
